[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cx"
version = "0.2.0"
description = "TUI for managing Claude Code sessions across git worktrees"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Javier Carrera" },
]
readme = "README.md"
keywords = ["claude", "claude-code", "tui", "worktree", "session-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Textual",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "textual>=1.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/javi-carrera/cx"
Repository = "https://github.com/javi-carrera/cx"
Issues = "https://github.com/javi-carrera/cx/issues"

[project.scripts]
cx = "cx.launch:main"
cxx = "cx.app:main"

[tool.hatch.build.targets.wheel]
packages = ["cx"]
