[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cx"
version = "0.2.0"
description = "Claude Code worktree and session manager"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
cx = "cx.launch:main"
cxx = "cx.app:main"

[tool.hatch.build.targets.wheel]
packages = ["cx"]
