[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cx"
version = "0.3.0"
description = "Dual-pane session manager for Claude Code and Codex CLI across git worktrees"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
cx = "cx.app:main"

[tool.hatch.build.targets.wheel]
packages = ["cx"]
